# kalman_filter

./: .gitignore  LICENSE  pyproject.toml  setup.py
docs/: api.rst  conf.py  index.rst
eskf/: __init__.py  main.py
eskf/core/: __init__.py  eskf.py  lie_groups.py
eskf/measurements/: __init__.py  gnss.py  imu.py
eskf/utils/: __init__.py  rotations.py
examples/: basic_imu.py  with_gps.py
examples/notebooks/: tutorial.ipynb
scripts/: plot_traj.py
tests/: __init__.py  test_eskf.py  test_lie_groups.py  test_measurements.py  test_rotations.py
