[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eskf-lie"
version = "0.1.0"
description = "Extended Kalman Filter with Lie Groups"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
